# nopal

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.toolchain  README.md  config.nims  nopal.nimble
.claude/agents/: embedded-reviewer.md  nim-reviewer.md  port-fidelity.md  security-reviewer.md  test-reviewer.md
.github/workflows/: build.yaml  ci.yaml  package-apk.yaml  package-ipk.yaml
docs/: architecture.md  design-philosophy.md  testing.md
fuzz/: fuzz_arp.nim  fuzz_dns.nim  fuzz_icmp.nim  fuzz_ipc.nim  fuzz_netlink.nim  fuzz_uci_parser.nim
fuzz/corpus/: sample_config.uci  sample_ipc_request.json
openwrt/: Makefile
openwrt/files/: nopal.config  nopal.init  rpcd-nopal
scripts/: build-target.sh  hwtest.py
src/: daemon  daemon.nim  daemon.rs  dns.rs  dnsmanager  dnsmanager.nim  error.rs  errors.nim  hooks.nim  linux_constants.nim  logging.nim  logging.rs  main.rs  nopal.nim  preflight.nim  snapshot.nim  statusfiles.nim  timer.nim  timer.rs  version.nim
src/config/: diff  diff.nim  diff.rs  discover.nim  mod.rs  parser  parser.nim  schema.nim  schema.rs
src/health/: arp  arp.nim  arp.rs  dampening  dampening.nim  dampening.rs  dns  dns.nim  dns.rs  engine  engine.nim  http  http.nim  http.rs  https.nim  https.rs  icmp  icmp.nim  icmp.rs  mod.rs
src/ipc/: methods  methods.nim  methods.rs  mod.rs  protocol  protocol.nim  protocol.rs  server  server.nim
src/netlink/: conntrack.nim  conntrack.rs  (+9 more)
tests/: t_config.nim  t_integration_dispatch.nim  t_integration_ipc.sh  t_integration_socket.nim  test_dispatch.nim
(+21 files in other folders)
