[package]
name = "nopal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-WAN manager for OpenWrt"
license = "Apache-2.0"

[features]
default = []
https = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
mio = { version = "0.8", features = ["os-poll", "os-ext", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
